# wayle-services

./: README.md
crates/wayle-audio/: Cargo.toml
crates/wayle-audio/src/: builder.rs  error.rs  events.rs  lib.rs  monitoring.rs  service.rs  tokio_mainloop.rs
crates/wayle-battery/: Cargo.toml
crates/wayle-battery/src/: error.rs  lib.rs  service.rs  types.rs
crates/wayle-bluetooth/: Cargo.toml
crates/wayle-bluetooth/src/: discovery.rs  error.rs  lib.rs  service.rs
crates/wayle-brightness/: Cargo.toml
crates/wayle-brightness/src/: builder.rs  lib.rs  monitoring.rs  service.rs
crates/wayle-cava/: build.rs
crates/wayle-cava/src/: lib.rs
crates/wayle-hyprland/src/: lib.rs  monitoring.rs  service.rs
crates/wayle-media/: Cargo.toml
crates/wayle-media/src/: builder.rs  error.rs  lib.rs  monitoring.rs  proxy.rs  service.rs  types.rs
crates/wayle-media/src/core/metadata/: mod.rs  monitoring.rs  types.rs
crates/wayle-media/src/core/player/: mod.rs  monitoring.rs  types.rs
crates/wayle-network/: Cargo.toml
crates/wayle-notification/: Cargo.toml
crates/wayle-notification/src/: builder.rs  daemon.rs  error.rs  events.rs  lib.rs  monitoring.rs  persistence.rs  service.rs
crates/wayle-notification/src/core/: controls.rs  mod.rs  notification.rs  types.rs
crates/wayle-notification/src/proxy/: notifications.rs
crates/wayle-notification/src/types/: mod.rs  notification.rs
crates/wayle-power-profiles/: Cargo.toml
crates/wayle-systray/: Cargo.toml
crates/wayle-traits/: Cargo.toml
crates/wayle-weather/: Cargo.toml
(+210 files in other folders)
