[package]
name = "wayle-media"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
wayle-traits.workspace = true
wayle-common.workspace = true
zbus.workspace = true

[lints]
workspace = true
